complete analysis methods, results and discussion section

--- a/source/references/references.bib
+++ b/source/references/references.bib
@@ -837,8 +837,7 @@ pages="261--280"
 @article{donath-2007,
   title={Signals, cues and meaning},
   author={Donath, Judith},
-  journal={Unpublished Manuscript. Massachusetts Institute of Technology, Cambridge, MA},
-  url = {http://smg.media.mit.edu/classes/IdentitySignals06/SignalingDraft.pdf},
+  journal={Manuscrito sin publicar. Massachusetts Institute of Technology, Cambridge, MA},
   year={2007}
 }
 
@@ -893,7 +892,7 @@ pages="261--280"
 }
 
 @book{newen-et-al-2018,
-  title={The Oxford handbook of 4E cognition},
+  title={The {O}xford handbook of 4E cognition},
   author={Newen, Albert and De Bruin, Leon and Gallagher, Shaun},
   year={2018},
   publisher={Oxford University Press}
@@ -928,7 +927,7 @@ pages="261--280"
 @article{simon-et-al-2008,
   title={Recognition and discrimination of prototypical dynamic expressions of pain and emotions},
   author={Simon, Daniela and Craig, Kenneth D and Gosselin, Frederic and Belin, Pascal and Rainville, Pierre},
-  journal={PAIN{\textregistered}},
+  journal={Pain},
   volume={135},
   number={1-2},
   pages={55--64},
@@ -937,7 +936,7 @@ pages="261--280"
 }
 
 @article{tottenham-et-al-2009,
-  title={The NimStim set of facial expressions: judgments from untrained research participants},
+  title={The {N}im{S}tim set of facial expressions: judgments from untrained research participants},
   author={Tottenham, Nim and Tanaka, James W and Leon, Andrew C and McCarry, Thomas and Nurse, Marcella and Hare, Todd A and Marcus, David J and Westerlund, Alissa and Casey, BJ and Nelson, Charles},
   journal={Psychiatry research},
   volume={168},
@@ -1100,7 +1099,7 @@ pages="261--280"
 }
 
 @article{mahmoudi-et-al-2012,
-  title={Multivoxel pattern analysis for FMRI data: a review},
+  title={Multivoxel pattern analysis for {FMRI} data: a review},
   author={Mahmoudi, Abdelhak and Takerkart, Sylvain and Regragui, Fakhita and Boussaoud, Driss and Brovelli, Andrea},
   journal={Computational and mathematical methods in medicine},
   volume={2012},
@@ -1206,7 +1205,7 @@ pages="261--280"
 }
 
 @book{millon-davis-1996,
-  title={Disorders of personality: DSM-IV and beyond},
+  title={Disorders of personality: {DSM-IV} and beyond},
   author={Millon, Theodore and Davis, Roger O},
   year={1996},
   publisher={John Wiley \& Sons}
@@ -1224,7 +1223,7 @@ pages="261--280"
 }
 
 @article{hurlemann-et-al-2007,
-  title={Amygdala control of emotion-induced forgetting and remembering: evidence from Urbach-Wiethe disease},
+  title={Amygdala control of emotion-induced forgetting and remembering: evidence from {U}rbach-{W}iethe disease},
   author={Hurlemann, Ren{\'e} and Wagner, Michael and Hawellek, Barbara and Reich, Harald and Pieperhoff, Peter and Amunts, Katrin and Oros-Peusquens, Ana-Maria and Shah, Nadim J and Maier, Wolfgang and Dolan, Raymond J},
   journal={Neuropsychologia},
   volume={45},
@@ -1266,7 +1265,7 @@ pages="261--280"
 }
 
 @article{kluver-bucy-1937,
-  title={" Psychic blindness" and other symptoms following bilateral temporal lobectomy in Rhesus monkeys.},
+  title={Psychic blindness and other symptoms following bilateral temporal lobectomy in Rhesus monkeys.},
   author={Kl{\"u}ver, Heinrich and Bucy, Paul C},
   journal={American Journal of Physiology},
   year={1937}
@@ -1295,7 +1294,7 @@ pages="261--280"
 }
 
 @article{ellis-et-al-1997,
-  title={Reduced autonomic responses to faces in Capgras delusion},
+  title={Reduced autonomic responses to faces in {C}apgras delusion},
   author={Ellis, Hadyn D and Young, Andrew W and Quayle, Angela H and De Pauw, Karel W},
   journal={Proceedings of the Royal Society of London. Series B: Biological Sciences},
   volume={264},
@@ -1306,7 +1305,7 @@ pages="261--280"
 }
 
 @article{ramachandran-1998,
-  title={Consciousness and body image: lessons from phantom limbs, Capgras syndrome and pain asymbolia},
+  title={Consciousness and body image: lessons from phantom limbs, {C}apgras syndrome and pain asymbolia},
   author={Ramachandran, VS},
   journal={Philosophical Transactions of the Royal Society of London. Series B: Biological Sciences},
   volume={353},
@@ -1441,7 +1440,7 @@ pages="261--280"
 }
 
 @article{cannon-1927,
-  title={The James-Lange theory of emotions: A critical examination and an alternative theory},
+  title={The {J}ames-{L}ange theory of emotions: A critical examination and an alternative theory},
   author={Cannon, Walter B},
   journal={The American journal of psychology},
   volume={39},
@@ -1463,7 +1462,7 @@ pages="261--280"
 }
 
 @article{triarhou-2008,
-  title={Centenary of Christfried Jakob's discovery of the visceral brain: An unheeded precedence in affective neuroscience},
+  title={Centenary of {C}hristfried {J}akob's discovery of the visceral brain: An unheeded precedence in affective neuroscience},
   author={Triarhou, Lazaros C},
   journal={Neuroscience \& Biobehavioral Reviews},
   volume={32},
@@ -1495,13 +1494,12 @@ pages="261--280"
   title={Your Brain Is Not an Onion with a Tiny Reptile Inside},
   author={Cesario, Joseph and Johnson, David J and Eisthen, Heather L},
   journal={Current Directions in Psychological Science},
-  pages={0963721420917687},
   year={2020},
   publisher={SAGE Publications Sage CA: Los Angeles, CA}
 }
 
 @article{maclean-1949,
-  title={Psychosomatic disease and the" visceral brain"; recent developments bearing on the Papez theory of emotion.},
+  title={Psychosomatic disease and the" visceral brain"; recent developments bearing on the {P}apez theory of emotion.},
   author={MacLean, Paul D},
   journal={Psychosomatic medicine},
   year={1949},
@@ -1576,7 +1574,7 @@ pages="261--280"
 
 @article{ogawa-et-al-1990,
   title={Oxygenation-sensitive contrast in magnetic resonance image of rodent brain at high magnetic fields},
-  author={Ogawa, Seiji and Lee, Tso-Ming and Nayak, Asha S and Glynn, Paul},
+  author={Ogawa, Seiji and Lee, TsoMing and Nayak, Asha S and Glynn, Paul},
   journal={Magnetic resonance in medicine},
   volume={14},
   number={1},
@@ -1587,7 +1585,7 @@ pages="261--280"
 
 @article{ogawa-lee-1990,
   title={Magnetic resonance imaging of blood vessels at high fields: in vivo and in vitro measurements and image simulation},
-  author={Ogawa, Seiji and Lee, Tso-Ming},
+  author={Ogawa, Seiji and Lee, TsoMing},
   journal={Magnetic resonance in medicine},
   volume={16},
   number={1},
@@ -1598,7 +1596,7 @@ pages="261--280"
 
 @article{ogawa-et-al-1990-2,
   title={Brain magnetic resonance imaging with contrast dependent on blood oxygenation},
-  author={Ogawa, Seiji and Lee, Tso-Ming and Kay, Alan R and Tank, David W},
+  author={Ogawa, Seiji and Lee, TsoMing and Kay, Alan R and Tank, David W},
   journal={proceedings of the National Academy of Sciences},
   volume={87},
   number={24},
@@ -1634,7 +1632,7 @@ pages="261--280"
 }
 
 @book{wilson-2012,
-  title={The social conquest of earth},
+  title={The social conquest of {E}arth},
   author={Wilson, Edward O},
   year={2012},
   publisher={WW Norton \& Company}
@@ -1652,7 +1650,7 @@ pages="261--280"
 }
 
 @article{conley-et-al-2018,
-  title={The racially diverse affective expression (RADIATE) face stimulus set},
+  title={The racially diverse affective expression ({RADIATE}) face stimulus set},
   author={Conley, May I and Dellarco, Danielle V and Rubien-Thomas, Estee and Cohen, Alexandra O and Cervera, Alessandra and Tottenham, Nim and Casey, BJ},
   journal={Psychiatry research},
   volume={270},
@@ -1714,7 +1712,7 @@ pages="261--280"
 }
 
 @article{liu-et-al-2014,
-  title={Seeing Jesus in toast: neural and behavioral correlates of face pareidolia},
+  title={Seeing {J}esus in toast: neural and behavioral correlates of face pareidolia},
   author={Liu, Jiangang and Li, Jun and Feng, Lu and Li, Ling and Tian, Jie and Lee, Kang},
   journal={Cortex},
   volume={53},
@@ -1724,7 +1722,7 @@ pages="261--280"
 }
 
 @article{friston-et-al-1991,
-  title={Comparing functional (PET) images: the assessment of significant change},
+  title={Comparing functional ({PET}) images: the assessment of significant change},
   author={Friston, Karl J and Frith, CD and Liddle, PF and Frackowiak, RSJ},
   journal={Journal of Cerebral Blood Flow \& Metabolism},
   volume={11},
@@ -1735,7 +1733,7 @@ pages="261--280"
 }
 
 @article{worsley-et-al-1992,
-  title={A three-dimensional statistical analysis for CBF activation studies in human brain},
+  title={A three-dimensional statistical analysis for {CBF} activation studies in human brain},
   author={Worsley, Keith J and Evans, Alan C and Marrett, Sean and Neelin, P},
   journal={Journal of Cerebral Blood Flow \& Metabolism},
   volume={12},
@@ -1898,7 +1896,7 @@ pages="261--280"
 }
 
 @article{pauli-1924,
-  title={{\"U}ber den Einflu{\ss} der Geschwindigkeitsabh{\"a}ngigkeit der Elektronenmasse auf den Zeemaneffekt},
+  title={{\"U}ber den {E}influ{\ss} der {G}eschwindigkeitsabh{\"a}ngigkeit der {E}lektronenmasse auf den {Z}eemaneffekt},
   author={Pauli, Wolfgang},
   journal={Zeitschrift f{\"u}r Physik},
   volume={31},
@@ -1911,21 +1909,21 @@ pages="261--280"
 @incollection{pauli-1927,
   title={Zur quantenmechanik des magnetischen elektrons},
   author={Pauli, Wolfgang},
-  booktitle={Wolfgang Pauli},
+  booktitle={Wolfgang {P}auli},
   pages={282--305},
   year={1927},
   publisher={Springer}
 }
 
 @inproceedings{preston-1898,
-  title={Radiation phenomena in a strong magnetic field:...},
+  title={Radiation phenomena in a strong magnetic field.},
   author={Preston, Thomas},
   year={1898},
   organization={R. Dublin Soc.}
 }
 
 @article{li-et-al-2016,
-  title={The first step for neuroimaging data analysis: DICOM to NIfTI conversion},
+  title={The first step for neuroimaging data analysis: DICOM to {NIfTI} conversion},
   author={Li, Xiangrui and Morgan, Paul S and Ashburner, John and Smith, Jolinda and Rorden, Christopher},
   journal={Journal of neuroscience methods},
   volume={264},
@@ -1987,9 +1985,9 @@ pages="261--280"
 }
 
 @inproceedings{mustra-et-al-2008,
-  title={Overview of the DICOM standard},
+  title={Overview of the {DICOM} standard},
   author={Mustra, Mario and Delac, Kresimir and Grgic, Mislav},
-  booktitle={2008 50th International Symposium ELMAR},
+  booktitle={2008 50th {I}nternational {S}ymposium {ELMAR}},
   volume={1},
   pages={39--44},
   year={2008},
@@ -1997,7 +1995,7 @@ pages="261--280"
 }
 
 @article{manjon-coupe-2016,
-  title={volBrain: an online MRI brain volumetry system},
+  title={volBrain: an online {MRI} brain volumetry system},
   author={Manj{\'o}n, Jos{\'e} V and Coup{\'e}, Pierrick},
   journal={Frontiers in neuroinformatics},
   volume={10},
@@ -2007,7 +2005,7 @@ pages="261--280"
 }
 
 @article{jenkinson-et-al-2012,
-  title={Fsl},
+  title={FSL},
   author={Jenkinson, Mark and Beckmann, Christian F and Behrens, Timothy EJ and Woolrich, Mark W and Smith, Stephen M},
   journal={Neuroimage},
   volume={62},
@@ -2040,7 +2038,7 @@ pages="261--280"
 }
 
 @article{woolrich-et-al-2001,
-  title={Temporal autocorrelation in univariate linear modeling of FMRI data},
+  title={Temporal autocorrelation in univariate linear modeling of {FMRI} data},
   author={Woolrich, Mark W and Ripley, Brian D and Brady, Michael and Smith, Stephen M},
   journal={Neuroimage},
   volume={14},
@@ -2068,4 +2066,317 @@ pages="261--280"
   pages={313--327},
   year={2011},
   publisher={Elsevier}
+}
+
+@article{hanke-et-al-2009,
+  title={PyMVPA: A python toolbox for multivariate pattern analysis of fMRI data},
+  author={Hanke, Michael and Halchenko, Yaroslav O and Sederberg, Per B and Hanson, Stephen Jos{\'e} and Haxby, James V and Pollmann, Stefan},
+  journal={Neuroinformatics},
+  volume={7},
+  number={1},
+  pages={37--53},
+  year={2009},
+  publisher={Springer}
+}
+
+@article{walther-et-al-2016,
+  title={Reliability of dissimilarity measures for multi-voxel pattern analysis},
+  author={Walther, Alexander and Nili, Hamed and Ejaz, Naveed and Alink, Arjen and Kriegeskorte, Nikolaus and Diedrichsen, J{\"o}rn},
+  journal={Neuroimage},
+  volume={137},
+  pages={188--200},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{kriegeskorte-et-al-2008,
+  title={Representational similarity analysis-connecting the branches of systems neuroscience},
+  author={Kriegeskorte, Nikolaus and Mur, Marieke and Bandettini, Peter A},
+  journal={Frontiers in systems neuroscience},
+  volume={2},
+  pages={4},
+  year={2008},
+  publisher={Frontiers}
+}
+
+@article{winkler-et-al-2014,
+  title={Permutation inference for the general linear model},
+  author={Winkler, Anderson M and Ridgway, Gerard R and Webster, Matthew A and Smith, Stephen M and Nichols, Thomas E},
+  journal={Neuroimage},
+  volume={92},
+  pages={381--397},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@article{smith-nichols-2009,
+  title={Threshold-free cluster enhancement: addressing problems of smoothing, threshold dependence and localisation in cluster inference},
+  author={Smith, Stephen M and Nichols, Thomas E},
+  journal={Neuroimage},
+  volume={44},
+  number={1},
+  pages={83--98},
+  year={2009},
+  publisher={Elsevier}
+}
+
+@misc{vapnik-chervonenkis-1974,
+  title={Theory of pattern recognition},
+  author={Vapnik, Vladimir and Chervonenkis, Alexey},
+  year={1974},
+  publisher={Nauka, Moscow}
+}
+
+@inproceedings{boser-et-al-1992,
+  title={A training algorithm for optimal margin classifiers},
+  author={Boser, Bernhard E and Guyon, Isabelle M and Vapnik, Vladimir N},
+  booktitle={Proceedings of the fifth annual workshop on Computational learning theory},
+  pages={144--152},
+  year={1992}
+}
+
+@article{cortes-vapnik-1995,
+  title={Support-vector networks},
+  author={Cortes, Corinna and Vapnik, Vladimir},
+  journal={Machine learning},
+  volume={20},
+  number={3},
+  pages={273--297},
+  year={1995},
+  publisher={Springer}
+}
+
+@article{bukowski-et-al-2013,
+  title={Cerebral lateralization of face-sensitive areas in left-handers: only the {FFA} does not get it right},
+  author={Bukowski, Henryk and Dricot, Laurence and Hanseeuw, Bernard and Rossion, Bruno},
+  journal={Cortex},
+  volume={49},
+  number={9},
+  pages={2583--2589},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@article{yovel-et-al-2008,
+  title={The asymmetry of the fusiform face area is a stable individual characteristic that underlies the left-visual-field superiority for faces},
+  author={Yovel, Galit and Tambini, Arielle and Brandman, Talli},
+  journal={Neuropsychologia},
+  volume={46},
+  number={13},
+  pages={3061--3068},
+  year={2008},
+  publisher={Elsevier}
+}
+
+@article{meadows-1974,
+  title={The anatomical basis of prosopagnosia},
+  author={Meadows, JC},
+  journal={Journal of Neurology, Neurosurgery \& Psychiatry},
+  volume={37},
+  number={5},
+  pages={489--501},
+  year={1974},
+  publisher={BMJ Publishing Group Ltd}
+}
+
+@software{pollard-et-al-2016,
+  author       = {Tom Pollard and
+                  Marvin Reimer and
+                  David San and
+                  Arco Mul and
+                  Matthew Gwynfryn Thomas and
+                  Jakub Nowosad and
+                  Dennis Weissmann and
+                  W. Caleb McDaniel},
+  title        = {Template for writing a {PhD} thesis in {M}arkdown},
+  month        = jul,
+  year         = 2016,
+  publisher    = {Zenodo},
+  version      = {v1.0},
+  doi          = {10.5281/zenodo.58490},
+  url          = {https://doi.org/10.5281/zenodo.58490}
+}
+
+@article{adolphs-2002,
+  title={Neural systems for recognizing emotion},
+  author={Adolphs, Ralph},
+  journal={Current opinion in neurobiology},
+  volume={12},
+  number={2},
+  pages={169--177},
+  year={2002},
+  publisher={Elsevier}
+}
+
+@article{gil-lievana-et-al-2020,
+  title={Glutamatergic basolateral amygdala to anterior insular cortex circuitry maintains rewarding contextual memory},
+  author={Gil-Lievana, Elvi and Balderas, Israela and Moreno-Castilla, Perla and Luis-Islas, Jorge and McDevitt, Ross A and Tecuapetla, Fatuel and Gutierrez, Ranier and Bonci, Antonello and Berm{\'u}dez-Rattoni, Federico},
+  journal={Communications biology},
+  volume={3},
+  number={1},
+  pages={1--11},
+  year={2020},
+  publisher={Nature Publishing Group}
+}
+
+@article{craig-2002,
+  title={How do you feel? Interoception: the sense of the physiological condition of the body},
+  author={Craig, Arthur D},
+  journal={Nature reviews neuroscience},
+  volume={3},
+  number={8},
+  pages={655--666},
+  year={2002},
+  publisher={Nature Publishing Group}
+}
+
+@article{critchley-2005,
+  title={Neural mechanisms of autonomic, affective, and cognitive integration},
+  author={Critchley, Hugo D},
+  journal={Journal of comparative neurology},
+  volume={493},
+  number={1},
+  pages={154--166},
+  year={2005},
+  publisher={Wiley Online Library}
+}
+
+@article{wolpert-et-al-1998,
+  title={Internal models in the cerebellum},
+  author={Wolpert, Daniel M and Miall, R Chris and Kawato, Mitsuo},
+  journal={Trends in cognitive sciences},
+  volume={2},
+  number={9},
+  pages={338--347},
+  year={1998},
+  publisher={Elsevier}
+}
+
+@article{strata-2015,
+  title={The emotional cerebellum},
+  author={Strata, Piergiorgio},
+  journal={The Cerebellum},
+  volume={14},
+  number={5},
+  pages={570--577},
+  year={2015},
+  publisher={Springer}
+}
+
+@article{schutter-2016,
+  title={A cerebellar framework for predictive coding and homeostatic regulation in depressive disorder},
+  author={Schutter, Dennis JLG},
+  journal={The Cerebellum},
+  volume={15},
+  number={1},
+  pages={30--33},
+  year={2016},
+  publisher={Springer}
+}
+
+@article{zaki-et-al-2009,
+  title={The neural bases of empathic accuracy},
+  author={Zaki, Jamil and Weber, Jochen and Bolger, Niall and Ochsner, Kevin},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={106},
+  number={27},
+  pages={11382--11387},
+  year={2009},
+  publisher={National Acad Sciences}
+}
+
+@article{vanoverwalle-baetens-2009,
+  title={Understanding others' actions and goals by mirror and mentalizing systems: a meta-analysis},
+  author={Van Overwalle, Frank and Baetens, Kris},
+  journal={Neuroimage},
+  volume={48},
+  number={3},
+  pages={564--584},
+  year={2009},
+  publisher={Elsevier}
+}
+
+@article{gorelova-et-al-2012,
+  title={The glutamatergic component of the mesocortical pathway emanating from different subregions of the ventral midbrain},
+  author={Gorelova, Natalia and Mulholland, Patrick J and Chandler, L Judson and Seamans, Jeremy K},
+  journal={Cerebral cortex},
+  volume={22},
+  number={2},
+  pages={327--336},
+  year={2012},
+  publisher={Oxford University Press}
+}
+
+@article{calvo-et-al-2006,
+  title={Facilitated detection of angry faces: Initial orienting and processing efficiency},
+  author={Calvo, Manuel G and Avero, Pedro and Lundqvist, Daniel},
+  journal={Cognition and Emotion},
+  volume={20},
+  number={6},
+  pages={785--811},
+  year={2006},
+  publisher={Taylor \& Francis}
+}
+
+@article{alcauter-et-al-2015,
+  title={Consistent anterior--posterior segregation of the insula during the first 2 years of life},
+  author={Alcauter, Sarael and Lin, Weili and Keith Smith, J and Gilmore, John H and Gao, Wei},
+  journal={Cerebral Cortex},
+  volume={25},
+  number={5},
+  pages={1176--1187},
+  year={2015},
+  publisher={Oxford University Press}
+}
+
+@article{mercadillo-et-al-2018,
+  title={Effects of primatological training on anthropomorphic valuations of emotions},
+  author={Mercadillo, Roberto E and Alcauter, Sarael and Barrios, Fernando A},
+  journal={IBRO reports},
+  volume={5},
+  pages={54--59},
+  year={2018},
+  publisher={Elsevier}
+}
+
+@article{mercadillo-et-al-2011,
+  title={Perception of suffering and compassion experience: brain gender disparities},
+  author={Mercadillo, Roberto E and D{\'\i}az, Jos{\'e} Luis and Pasaye, Erick H and Barrios, Fernando A},
+  journal={Brain and cognition},
+  volume={76},
+  number={1},
+  pages={5--14},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@book{brown-et-al-2014,
+  title={Magnetic resonance imaging: physical principles and sequence design},
+  author={Brown, Robert W and Cheng, Y-C Norman and Haacke, E Mark and Thompson, Michael R and Venkatesan, Ramesh},
+  year={2014},
+  publisher={John Wiley \& Sons}
+}
+
+@book{devore-2011,
+  title={Probability and Statistics for Engineering and the Sciences},
+  author={Devore, Jay L},
+  year={2011},
+  publisher={Cengage learning}
+}
+
+@book{christensen-2002,
+  title={Plane answers to complex questions},
+  author={Christensen, Ronald},
+  volume={35},
+  number={1},
+  year={2002},
+  publisher={Springer}
+}
+
+@book{sorenson-1980,
+  title={Parameter estimation: principles and problems},
+  author={Sorenson, Harold Wayne},
+  volume={9},
+  year={1980},
+  publisher={M. Dekker}
 }
