--- a/source/references/references.bib
+++ b/source/references/references.bib
@@ -2380,3 +2380,12 @@ pages="261--280"
   year={1980},
   publisher={M. Dekker}
 }
+
+
+@article{sha-2020,
+  title={Neuroscience has much to learn from Hume’s philosophy of emotions},
+  author={Sha, Richard C},
+  journal={Psyche},
+  year={2020},
+  publisher={Aeon}
+}
